--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-auth-session": "~4.0.3",
     "expo-linear-gradient": "~12.1.2",
@@ -19,10 +22,14 @@
     "expo-web-browser": "~12.1.1",
     "native-base": "^3.4.28",
     "native-forms": "^1.7.5",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-hook-form": "^7.43.7",
     "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-svg": "13.4.0",
     "typescript": "^4.9.4",
     "yup": "^1.0.2"
